# SPDX-FileCopyrightText: Copyright (c) 2024-2026, NVIDIA CORPORATION.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cuvs-sys"
description = "Low-level FFI bindings for the cuVS C API (libcuvs_c)"
links = "cuvs" # expose build variables to downstream crates via "DEP_CUVS_*"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
generate-bindings = ["bindgen"]
doc-only = []

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cmake-package = "0.1"
anyhow = "1"

[package.metadata.docs.rs]
features = ["doc-only"]
