[package]
name = "cuvs"
description = "RAPIDS vector search library"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
doc-only = ["cuvs-sys/doc-only"]

[dependencies]
cuvs-sys = { workspace = true }
ndarray = "0.15"

[dev-dependencies]
ndarray-rand = "0.14"
mark-flaky-tests = "1"
# Used only by the `vamana` example to load and search a cuVS-serialized
# Vamana index via Microsoft DiskANN's Rust API.
diskann = "0.51"
diskann-providers = "0.51"
diskann-vector = "0.51"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[example]]
name = "vamana"
required-features = []

[package.metadata.docs.rs]
features = ["doc-only"]
