[package]
name = "cuvs"
description = "RAPIDS vector search library"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
doc-only = ["cuvs-sys/doc-only"]

[dependencies]
cuvs-sys = { workspace = true }
ndarray = "0.15"

[dev-dependencies]
ndarray-rand = "0.14"

[package.metadata.docs.rs]
features = ["doc-only"]
