[package]
name = "cuvs"
description = "RAPIDS vector search library"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
doc-only = ["cuvs-sys/doc-only"]

[dependencies]
cuvs-sys = { workspace = true }
thiserror = "2"
tinyvec = { version = "1", features = ["alloc"] }

[dev-dependencies]
ndarray = "0.17"
ndarray-rand = "0.16"
tempfile = "3"

[package.metadata.docs.rs]
features = ["doc-only"]
